--- a/Crossword.csproj
+++ b/Crossword.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\bootstrap-icons\" />
+  </ItemGroup>
+
 </Project>
